--- a/web/app/user/sass/components/_filterPardahLayer2.scss
+++ b/web/app/user/sass/components/_filterPardahLayer2.scss
@@ -21,15 +21,18 @@
         z-index: -1;
         background-size: cover;
         height: 100%;
+        width: 90px;
 
         & > ul {
             display: block;
             margin-top: 32px;
             margin-left: 35px;
-            width: 72%;
+            width: 80%;
             height: 92%;
             overflow-x: hidden;
             overflow-y: auto;
+            margin-right: 30px;
+            padding-right: 15px;
             .list-item {
                 padding: 5px 2%;
                 & > a {
